# DIBS---Dynamic-ISO-Building-Simulator

./: .sourcery.yaml  LICENSE  README.md  Vagrantfile  bootstrap.sh  dibscli.py  main.py  pyproject.toml  requirements.txt  simulation_log.txt  validate_inputs.py
data_preprocessing/breitenerhebung/: Improvments_to_dataPreprocessing_BE__2023_07_24.txt  dataPreprocessingBE.py
data_preprocessing/tiefenerhebung/: dataPreprocessingTE.py
iso_simulator/: Heating_Load_Calculator.py  __init__.py  building_physics.py  emission_system.py  radiation.py  supply_system.py
iso_simulator/annualSimulation/: BuerosSchalterhalleempfang.csv.json  OccupancySchedulesZuweisungen.json  Produktiongrob.csv.json  Restaurant.csv.json  SchulzimmerHoersaal.csv.json  SimulationData_Breitenerhebung.csv  SimulationData_Tiefenerhebung.csv  TekNwgVergleichswerteZuweisung.csv.json  Vorstellungsraum.csv.json  annualSimulation.py
iso_simulator/auxiliary/: TEKReader.py  dataPreprocessingBE.py  dataPreprocessingTE.py  (+3 more)
results/: AB123456_1_00.xlsx  AB123456_1_01.xlsx  AB123456_1_02.xlsx  AB123456_1_03.xlsx  AB123456_1_04.xlsx  AB123456_1_05.xlsx  AB123456_1_06.xlsx  AB123456_1_07.xlsx  AB123456_1_08.xlsx  annualResults_summaries.xlsx  annualResults_summary.xlsx  test.xlsx
results_after_calculations/: AB123456_1_00.xlsx  AB123456_1_01.xlsx  AB123456_1_02.xlsx  AB123456_1_03.xlsx  AB123456_1_04.xlsx  AB123456_1_05.xlsx  AB123456_1_06.xlsx  AB123456_1_07.xlsx  AB123456_1_08.xlsx  BB929874_0_00.xlsx
tests/: test_building_calc.py  test_calculations.py  test_dibs.py  test_schedule.py  test_window_calc.py
(+339 files in other folders)
